# keyboard-heatmap

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md
src/: app.rs  color.rs  key_box.rs  keyboard.rs  listen.rs  main.rs  press_time_map.rs  tray.rs  typing_log.rs  window_visibility.rs
