[package]
name = "keyboard-heatmap"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = { git = "https://github.com/werifu/rdev.git", branch = "empty-name" }
eframe = "0.33.3"
egui = "0.33.3"
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
native-dialog = "0.9.6"
chrono = { version = "0.4.44", features = ["serde"] }
